examples/test/testpolicy19869.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19869
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key28: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value35
          key25: value38
          key18: value13
      podSelector:
        matchLabels:
          key1: value29
          key22: value0
          key23: value0
